--- a/style.css
+++ b/style.css
@@ -5,51 +5,72 @@
 }
 
 * {
-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html,
 body {
-height: 100%;
-margin: 0;
-padding: 0;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-overflow: hidden;
-display: grid;
-color: white;
-background: black;
-font-family: 'Tequilla Sunrise', sans-serif; /* Utilisation de la nouvelle police */
+  overflow: hidden;
+  display: grid;
+  color: white;
+  background: black;
+  font-family: 'Tequilla Sunrise', sans-serif; /* Utilisation de la nouvelle police */
 }
 
 .message-container {
-position: absolute;
-top: 20%;
-left: 50%;
-transform: translate(-50%, -10%);
-width: 80%;
-max-height: 80%; /* Limiter la hauteur du conteneur */
-padding: 20px;
-border-radius: 10px;
-font-size: 1.2em;
-line-height: 1.5;
-text-align: center;
-color: white;
-overflow-y: auto; /* Ajouter une barre de défilement verticale */
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -10%);
+  width: 80%;
+  max-height: 80%; /* Limiter la hauteur du conteneur */
+  padding: 20px;
+  border-radius: 10px;
+  font-size: 1.2em;
+  line-height: 1.5;
+  text-align: center;
+  color: white;
+  overflow-y: auto; /* Ajouter une barre de défilement verticale */
 }
 
 .message-container p {
-margin: 10px 0; /* Espacement entre les paragraphes */
+  margin: 10px 0; /* Espacement entre les paragraphes */
 }
 
 /* Styles pour les petits écrans */
 @media (max-width: 600px) {
-.message-container {
-  width: 90%; /* Ajuster la largeur pour les petits écrans */
-  top: 5%;
-  transform: translate(-50%, -5%);
-  font-size: 1em; /* Réduire la taille de la police */
-  padding: 15px;
+  .message-container {
+    width: 90%; /* Ajuster la largeur pour les petits écrans */
+    top: 5%;
+    transform: translate(-50%, -5%);
+    font-size: 1em; /* Réduire la taille de la police */
+    padding: 15px;
+  }
 }
+
+#music-control {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  display: flex;
+  align-items: center;
+}
+
+#music-button {
+  background: none;
+  border: none;
+  color: rgb(255, 255, 255);
+  font-size: 1.5em;
+  cursor: pointer;
+}
+
+#music-text {
+  margin-left: 10px;
+  font-size: 1.2em;
 }
